Fixing nav bar alignment and shop basket not working, adding about page

--- a/src/features/ui/nav-bar/nav-bar.css
+++ b/src/features/ui/nav-bar/nav-bar.css
@@ -10,8 +10,12 @@
     text-align: right;
 }
 
-#navBarDrawerTitle {
+.navBarDrawerTitle {
     text-align: center;
+}
+
+.navBarDrawerDivider {
+    width: 100%;
 }
 
 .navBarItem {
